# whisper-streaming-client

./: README.md  a.ipynb  a.py  docker-compose.yml  main.py  main_ffmpeg.py  nginx.conf  pyproject.toml  realtime_subtitles.txt
docker/: Dockerfile  default.conf  nginx.conf
